# Lucky-Tom

./: README.md  docker-compose.yml
core/: .dockerignore  Dockerfile  example.env  pyproject.toml
core/src/: logger.py
docker/postgres/init-db.d/: init.sql
docker/redis/: redis.conf  users.acl
docs/: business-requirements.md  project-plan.md  system-design.md  system-vision.md  tech-stack.md
slot/: Dockerfile  example.env  pyproject.toml  settings.py
